quick & dirty ajout de l'api au front

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -48,7 +48,7 @@
                     <span class="icon-grid"></span>
                     <span class="icon-menu"></span>
                 </div>
-                <div class="article">
+                <!-- <div class="article">
                     <div class="info-article">
                         <p class="name">Resto 1</p>
                         <p class="price">€€</p>
@@ -61,6 +61,14 @@
                         <p class="price">€€</p>
                     </div>
                     <div class="image"><img src="img/burger.jpg" alt="burger"></div>
+                </div> -->
+                <div class="article-grid">
+                    <div class="ui-block-a"><img src="img/burger.jpg" alt=""></div>
+                    <div class="ui-block-b"><img src="img/plateau.jpg" alt=""></div>
+                    <div class="ui-block-c"><img src="img/steak.jpg" alt=""></div>
+                    <div class="ui-block-a"><img src="img/burger.jpg" alt=""></div>
+                    <div class="ui-block-b"><img src="img/plateau.jpg" alt=""></div>
+                    <div class="ui-block-c"><img src="img/steak.jpg" alt=""></div>
                 </div>
             </div>
         </div>
@@ -71,7 +79,7 @@
         <script type="text/javascript" src="js/lib/lodash/lodash.min.js"></script>
 
         <!--  SCRIPT PERSOS -->
-        <script type="text/javascript" src="js/app/api/instagram.js"></script>
+        <script type="text/javascript" src="js/app/api.js"></script>
 
         <!-- LANCE L'APPLICATION MOBILE -->
         <script type="text/javascript" src="js/index.js"></script>
