chargement des photos en front

--- a/www/index.html
+++ b/www/index.html
@@ -45,8 +45,8 @@
 
             <div role="main" class="ui-content">
                 <div class="display">
-                    <span onclick="menu()" class="icon-grid"></span>
-                    <span onclick="displayGrid()" class="icon-menu"></span>
+                    <span class="icon-grid"></span>
+                    <span class="icon-menu"></span>
                 </div>
                 <!-- <div id="article">
                     <div class="info-article">
@@ -73,14 +73,14 @@
             </div>
         </div>
 
-        <script>
+        <script type="text/javascript" src="cordova.js"></script>
 
-        </script>
         <!--  LIBS -->
         <script type="text/javascript" src="js/lib/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="js/lib/lodash/lodash.min.js"></script>
 
         <!--  SCRIPT PERSOS -->
+        <script type="text/javascript" src="js/app/home.js"></script>
         <script type="text/javascript" src="js/app/api.js"></script>
 
         <!-- LANCE L'APPLICATION MOBILE -->
