--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -48,7 +48,7 @@
                     <span class="icon-grid"></span>
                     <span class="icon-menu"></span>
                 </div>
-                <!-- <div class="article">
+                <!-- <div id="article">
                     <div class="info-article">
                         <p class="name">Resto 1</p>
                         <p class="price">€€</p>
@@ -62,32 +62,25 @@
                     </div>
                     <div class="image"><img src="img/burger.jpg" alt="burger"></div>
                 </div> -->
-                <div class="article-grid">
-<<<<<<< HEAD
+                <div id="articlegrid" class="">
                     <img class="image" src="img/burger.jpg" alt="">
                     <img class="image" src="img/plateau.jpg" alt="">
                     <img class="image" src="img/steak.jpg" alt="">
                     <img class="image" src="img/burger.jpg" alt="">
                     <img class="image" src="img/plateau.jpg" alt="">
                     <img class="image" src="img/steak.jpg" alt="">
-=======
-                    <div class="ui-block-a"><img src="img/burger.jpg" alt=""></div>
-                    <div class="ui-block-b"><img src="img/plateau.jpg" alt=""></div>
-                    <div class="ui-block-c"><img src="img/steak.jpg" alt=""></div>
-                    <div class="ui-block-a"><img src="img/burger.jpg" alt=""></div>
-                    <div class="ui-block-b"><img src="img/plateau.jpg" alt=""></div>
-                    <div class="ui-block-c"><img src="img/steak.jpg" alt=""></div>
->>>>>>> f358815080b7a8bdec1a3b0ba13635c0749820ef
                 </div>
             </div>
         </div>
 
+        <script type="text/javascript" src="cordova.js"></script>
 
         <!--  LIBS -->
         <script type="text/javascript" src="js/lib/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="js/lib/lodash/lodash.min.js"></script>
 
         <!--  SCRIPT PERSOS -->
+        <script type="text/javascript" src="js/app/home.js"></script>
         <script type="text/javascript" src="js/app/api.js"></script>
 
         <!-- LANCE L'APPLICATION MOBILE -->
