--- a/www/index.html
+++ b/www/index.html
@@ -45,37 +45,21 @@
 
             <div role="main" class="ui-content">
                 <div class="display">
-                    <span onclick="menu()" class="icon-grid"></span>
-                    <span onclick="displayGrid()" class="icon-menu"></span>
+                    <span class="icon-grid"></span>
+                    <span class="icon-menu selected"></span>
                 </div>
-                <!-- <div id="article">
-                    <div class="info-article">
-                        <p class="name">Resto 1</p>
-                        <p class="price">€€</p>
+                <div id="articlemenu" attr-grid="true">
+                    <div class="article">
+                        <div class="info-article">
+                            <p class="name">Resto 1</p>
+                            <p class="price">€€</p>
+                        </div>
+                        <img class="image" src="img/burger.jpg" alt="burger">
                     </div>
-                    <div class="image"><img src="img/burger.jpg" alt="burger"></div>
-                </div>
-                <div class="article">
-                    <div class="info-article">
-                        <p class="name">Resto 1</p>
-                        <p class="price">€€</p>
-                    </div>
-                    <div class="image"><img src="img/burger.jpg" alt="burger"></div>
-                </div> -->
-                <div id="articlegrid" class="">
-                    <img class="image" src="img/burger.jpg" alt="">
-                    <img class="image" src="img/plateau.jpg" alt="">
-                    <img class="image" src="img/steak.jpg" alt="">
-                    <img class="image" src="img/burger.jpg" alt="">
-                    <img class="image" src="img/plateau.jpg" alt="">
-                    <img class="image" src="img/steak.jpg" alt="">
                 </div>
             </div>
         </div>
 
-        <script>
-
-        </script>
         <!--  LIBS -->
         <script type="text/javascript" src="js/lib/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="js/lib/lodash/lodash.min.js"></script>
@@ -85,5 +69,38 @@
 
         <!-- LANCE L'APPLICATION MOBILE -->
         <script type="text/javascript" src="js/index.js"></script>
+
+        <script>
+            $(function() {
+                $('.icon-menu').on('click', function() {
+                    $('.icon-grid').removeClass('selected');
+                    $('.icon-menu').addClass('selected');
+                    var gridtype = $('#articlegrid').attr('attr-grid');
+
+                   if(gridtype === 'false') {
+
+                        $('#articlegrid').attr('attr-grid', 'true');
+                        $('#articlegrid').attr('id', 'articlemenu');
+                   }
+
+                }),
+
+                $('.icon-grid').on('click', function() {
+
+                    $('.icon-menu').removeClass('selected');
+                    $('.icon-grid').addClass('selected');
+
+                   var gridtype = $('#articlemenu').attr('attr-grid');
+
+                   if(gridtype === 'true') {
+
+                        $('#articlemenu').attr('attr-grid', 'false');
+                        $('#articlemenu').attr('id', 'articlegrid');
+                   }
+
+                })
+            })
+            
+        </script>
     </body>
 </html>
