--- a/www/index.html
+++ b/www/index.html
@@ -62,14 +62,7 @@
                     </div>
                     <div class="image"><img src="img/burger.jpg" alt="burger"></div>
                 </div> -->
-                <div id="articlegrid" class="">
-                    <img class="image" src="img/burger.jpg" alt="">
-                    <img class="image" src="img/plateau.jpg" alt="">
-                    <img class="image" src="img/steak.jpg" alt="">
-                    <img class="image" src="img/burger.jpg" alt="">
-                    <img class="image" src="img/plateau.jpg" alt="">
-                    <img class="image" src="img/steak.jpg" alt="">
-                </div>
+                <div id="articlegrid" class=""></div>
             </div>
         </div>
 
