--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,7 @@
                     <span class="icon-grid"></span>
                     <span class="icon-menu selected"></span>
                 </div>
-                <div id="articlemenu" attr-grid="true">
+                <div id="articlemenu" attr-grid="true" class="articlegrid">
                     <div class="article">
                         <div class="info-article">
                             <p class="name">Resto 1</p>
