--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -7,7 +7,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
         <link rel="stylesheet" type="text/css" href="css/transition.min.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css">
@@ -36,6 +35,7 @@
 
         <!--  LIBS -->
         <script type="text/javascript" src="http://zeptojs.com/zepto.js"></script>
+        <script type="text/javascript" src="js/lib-perso/zepto-transition/touch.js"></script>
         <script type="text/javascript" src="js/lib-perso/zepto-transition/transition.min.js"></script>
         <script type="text/javascript" src="js/lib/lodash/lodash.min.js"></script>
 
