--- a/www/place-info.html
+++ b/www/place-info.html
@@ -1,28 +1,3 @@
-
-<script>
-
-var map;
-	function initialize() {
-
-	  var myLatlng = new google.maps.LatLng(48.870643, 2.332355);
-	  var mapOptions = {
-	    zoom: 16,
-	    center: myLatlng,
-	    disableDefaultUI:true
-	  };
-	  map = new google.maps.Map(document.getElementById('map-canvas'),
-	      mapOptions);
-
-	  var marker = new google.maps.Marker({
-	      position: myLatlng,
-	      map: map,
-	      title: 'Hello World!'
-	  });
-	};
-
-	initialize();
-</script>
-
 <div class="app" id="place-info">
     <div id="header">
         <a href="index.html"><span class="icon-arrow-left"></span></a>
@@ -30,13 +5,7 @@ var map;
         <span class="icon-ellipsis"></span>
     </div>
 
-    <img src="img/burger.jpg">
-    <div>
-        <p>22, rue Saint Albert</p>
-        <p>€€€</p>
-        <p>Paris</p>
-        <p>9/10</p>
-    </div>
+	<div class="content-place">
+	</div>
     <div id="map-canvas" class="clear"></div>
 </div>
-
