--- a/www/place-info.html
+++ b/www/place-info.html
@@ -1,11 +1,13 @@
 <div class="app" id="place-info">
     <div id="header">
-        <a href="index.html"><span class="icon-arrow-left"></span></a>
+        <span class="icon-arrow-left back-to-home"></span>
         <h1>instafood</h1>
         <span class="icon-ellipsis"></span>
     </div>
 
 	<div class="content-place">
 	</div>
-    <div id="map-canvas" class="clear"></div>
+	<div class="map-canvas-wrapper">
+
+	</div>
 </div>
