gestion de l'asynchrome et refont de la home

--- a/www/index.html
+++ b/www/index.html
@@ -13,21 +13,9 @@
         <title>Instafood</title>
     </head>
     <body>
-        <div class="app" id="front-page">
-            <div data-role="header" id="header">
-                <h1>instafood</h1>
-                <span class="icon-ellipsis"></span>
-            </div>
 
-            <div>
-                <div class="display">
-                    <span class="icon-grid"></span>
-                    <span class="icon-menu selected"></span>
-                </div>
-                <div id="articlemenu" attr-grid="true" class="articlegrid">
-                </div>
-            </div>
-        </div>
+        <div id="content"></div>
+        <div id="options"></div>
 
         <script type="text/javascript" src="cordova.js"></script>
 
