--- a/www/place-info.html
+++ b/www/place-info.html
@@ -2,7 +2,7 @@
     <div id="header">
         <span class="icon-arrow-left back-to-home"></span>
         <h1>instafood</h1>
-        <span class="icon-ellipsis"></span>
+        <span class="icon-ellipsis option-menu"></span>
     </div>
 
 	<div class="content-place">
