--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
 
             <div>
                 <div class="display">
+                    <a href="options.html">options</a>
                     <span class="icon-grid"></span>
                     <span class="icon-menu selected"></span>
                 </div>
