--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,8 @@
     </head>
     <body>
 
-        <div id="content"></div>
+        <div id="content" data-role="page"></div>
+        <div id="map-canvas" class="clear"></div>
         <div id="options"></div>
 
         <script type="text/javascript" src="cordova.js"></script>
