--- a/www/place-info.html
+++ b/www/place-info.html
@@ -5,9 +5,6 @@
         <span class="icon-ellipsis option-menu"></span>
     </div>
 
-	<div class="content-place">
-	</div>
-	<div class="map-canvas-wrapper">
-
-	</div>
+	<div class="content-place"></div>
+    <div class="map-canvas-wrapper"></div>
 </div>
