--- a/www/options.html
+++ b/www/options.html
@@ -4,8 +4,16 @@
     </div>
     <div class="content-options">
     	<p class="subtitle-options">Distance</p>
-    	<p class="range">23 mètres</p>
-    	<button></button>
+    	<output for="fader" id="range" class="range">400 mètres</output>
+    	<div class="clear">
+		<input type=range min="10" max="1000" value="400" id="fader" step="1" oninput="outputUpdate(value)">
+	</div>
+	<div class="validate">Valider</div>
+<script>
+	function outputUpdate(vol) {
+		document.querySelector('#range').value = vol + ' mètres';
+	}
+</script>
     </div>
     
 </div>
