changment de serveur

--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
     <body>
 
         <div id="content" data-role="page"></div>
+        <div id="loader"><img src="img/loader.gif" /></div>
         <div id="map-canvas" class="clear"></div>
         <div id="options"></div>
 
