--- a/www/index.html
+++ b/www/index.html
@@ -25,9 +25,9 @@
                 <p class="subtitle-options">Distance</p>
                 <output for="fader" id="range" class="range">400 mètres</output>
                 <div class="clear">
-                    <input type=range min="10" max="1000" value="400" id="fader" step="1" oninput="outputUpdate(value)">
+                    <input type=range min="10" max="1000" value="400" id="fader" step="1" oninput="outputUpdate(value)" class="options-range">
                 </div>
-                <div class="validate">Valider</div>
+                <div class="options-validate">Valider</div>
             </div>
         </div>
 
