--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
         <div id="map-canvas" class="clear"></div>
         <div id="options">
             <div class="title-options">
+                <span class="icon-cross back-options"></span>
                 <p>Options</p>
             </div>
             <div class="content-options">
